<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo1">


    <ImageButton
        android:id="@+id/btn_lupa2"
        android:layout_width="52dp"
        android:layout_height="48dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="22dp"
        android:background="@drawable/fondo_boton_redondo"
        android:contentDescription="@string/boton_lupa"
        android:onClick="buscar_usuario"
        app:layout_constraintBottom_toTopOf="@+id/rv_users"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.625"
        app:layout_constraintStart_toEndOf="@+id/edt_buscar_usuario"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.666"
        app:srcCompat="@android:drawable/ic_menu_search"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/txt_titulo_admin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_lista_usuarios"
        android:textColor="@color/titulo"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn_logout_user"
        tools:ignore="ImageContrastCheck"
        android:layout_width="68dp"
        android:layout_height="56dp"
        android:background="@drawable/fondo_boton_redondo_logout"
        android:contentDescription="@string/boton_modperfil"
        android:onClick="logout"
        android:tintMode="src_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976"
        app:srcCompat="@android:drawable/ic_lock_power_off"
        app:tint="@color/white" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_users"
        android:layout_width="406dp"
        android:layout_height="544dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="72dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_buscar_usuario" />

    <EditText
        android:id="@+id/edt_buscar_usuario"
        android:layout_width="322dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/busca_un_usuario"
        android:inputType="text"
        android:textColorHint="@color/hint"
        app:layout_constraintBottom_toTopOf="@+id/rv_users"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.348"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_titulo_admin"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>