...
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp">

        <TextView
            android:id="@+id/nombre_usuario"
            android:layout_width="195dp"
            android:layout_height="31dp"
            android:layout_marginEnd="20dp"
            android:text="@string/nombre_del_usuario"
            android:textColor="@color/black"
            android:textSize="20sp"
...
