...
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/busca_fecha"
        android:inputType="number"
        android:textColorHint="@color/hint"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/rv_reservas"
        app:layout_constraintEnd_toStartOf="@+id/btn_lupa3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_titulo_user"
        android:autofillHints="" />

    <ImageButton
...
