...
        android:layout_marginBottom="10dp"
        android:adjustViewBounds="true"
        android:background="@drawable/fondo_boton_redondo"
        android:contentDescription="@string/boton_modperfil"
        android:onClick="changeProfile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_ajustes"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btn_lupa"
        app:layout_constraintTop_toTopOf="@+id/rv_chefs"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_action_name"
        tools:ignore="ImageContrastCheck"
...
